force-app/main/default/objects/Coverage__c/Coverage__c.object-meta.xml
<CustomObject>
    <label>Coverage</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Coverage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coverages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>