force-app/main/default/objects/Coverage__c/fields/Accessible_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Accessible_Record_Types__c</fullName>
    <label>Accessible Record Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>For all Record Types</fullName>
                <default>true</default>
                <label>For all Record Types</label>
            </value>
            <value>
                <fullName>Scale</fullName>
            </value>
            <value>
                <fullName>Foundershield</fullName>
            </value>
            <value>
                <fullName>Don&apos;t use</fullName>
            </value>
            <value>
                <fullName>AlphaRoot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>