force-app/main/default/objects/Coverage__c/fields/Acronym__c.field-meta.xml
<CustomField>
    <fullName>Acronym__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acronym</label>
    <length>100</length>
    <type>Text</type>
</CustomField>