force-app/main/default/objects/Coverage__c/fields/Field_Set_for_Quote__c.field-meta.xml
<CustomField>
    <fullName>Field_Set_for_Quote__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Set for Quote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>