force-app/main/default/objects/Coverage__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes field to list who the coverage is for (For Scale Only)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <length>25</length>
    <type>Text</type>
</CustomField>